# sway-dynamic

./: Cargo.toml  LICENSE  Makefile  README.md  flake.nix
src/: main.rs
