[package]
name = "sway-dynamic"
version = "0.2.0"
authors = ["Jason Nader <jason.nader@protonmail.com>", "Khue Doan <mail@khuedoan.com>"]
description = "Dynamic window management for Sway WM (similar to dwm)"
edition = "2018"

[dependencies]
swayipc = "3.0"

[dependencies.clap]
version = "3.0"
default-features = false
features = ["std", "derive"]
